--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,19 +9,19 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
 
-    <Button
+<!--    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add New Record"
+        android:text="@string/add_new_record_button_text"
         android:id="@+id/add_button"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
-        android:onClick="showAddNewRecord"/>
+        android:onClick="showAddNewRecord"/>-->
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Plant Observation"
+        android:text="@string/add_observation_plant_button_text"
         android:id="@+id/add_observation_plant_button"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
@@ -30,7 +30,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Animal Observation"
+        android:text="@string/add_observation_animal_button_text"
         android:id="@+id/add_obsercation_animal_button"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
