--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,18 +23,16 @@
         android:layout_height="wrap_content"
         android:text="@string/add_observation_plant_button_text"
         android:id="@+id/add_observation_plant_button"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="130dp"
-        android:onClick="showAddObservationPlant"/>
+        android:onClick="showAddObservationPlant"
+        android:layout_above="@+id/add_observation_plant_button"
+        android:layout_alignParentEnd="true" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_observation_animal_button_text"
-        android:id="@+id/add_obsercation_animal_button"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="180dp"
-        android:onClick="showAddObservationAnimal"/>
+        android:id="@+id/add_observation_animal_button"
+        android:onClick="showAddObservationAnimal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
