--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.catrock.phenologyfriend.AboutActivity">
 
-    <TextView android:text="@string/about_text" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="@string/about_page_title" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/aboutPageTitleText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/about_page_body"
+        android:id="@+id/aboutPageBodyText"
+        android:layout_below="@+id/aboutPageTitleText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="74dp" />
 
 </RelativeLayout>
