--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.catrock.phenologyfriend.SettingsActivity">
 
-    <TextView android:text="@string/settings_text" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="@string/settings_page_title" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/settingsPageTitleText" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/settings_page_body"
+        android:id="@+id/settingsPageBodyText"
+        android:layout_below="@+id/settingsPageTitleText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="74dp" />
 </RelativeLayout>
