--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:orientation="horizontal"
         android:layout_above="@+id/mainAnimalLastLinearLayout"
         android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
         android:id="@+id/mainPlantLastLinearLayout">
         <TextView
             android:layout_width="0dp"
@@ -28,8 +29,9 @@
             android:text="@string/mainLatestPlantText"
             android:id="@+id/mainLatestPlantText"
             android:gravity="right|end"
-            android:paddingStart="0dp"
-            android:paddingEnd="8dp" />
+            android:paddingLeft="0dp"
+            android:paddingEnd="8dp"
+            android:paddingRight="0dp" />
 
         <TextView
             android:layout_width="0dp"
@@ -54,8 +56,10 @@
             android:text="@string/mainLatestAnimalText"
             android:id="@+id/mainLatestAnimalText"
             android:gravity="right|end"
-            android:paddingStart="0dp"
-            android:paddingEnd="8dp" />
+            android:paddingLeft="0dp"
+            android:paddingEnd="8dp"
+            android:paddingRight="0dp"
+            />
 
         <TextView
             android:layout_width="0dp"
@@ -73,7 +77,8 @@
         android:id="@+id/add_observation_plant_button"
         android:onClick="showAddObservationPlant"
         android:layout_above="@+id/add_observation_animal_button"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"/>
 
     <Button
         android:layout_width="match_parent"
@@ -82,7 +87,8 @@
         android:id="@+id/add_observation_animal_button"
         android:onClick="showAddObservationAnimal"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
 
 
 </RelativeLayout>
