--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,6 @@
         android:orientation="horizontal"
         android:layout_above="@+id/mainAnimalLastLinearLayout"
         android:layout_alignParentStart="false"
-        android:layout_alignParentLeft="false"
         android:id="@+id/mainPlantLastLinearLayout">
         <TextView
             android:layout_width="0dp"
@@ -28,7 +27,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/mainLatestPlantText"
             android:id="@+id/mainLatestPlantText"
-            android:gravity="right|end"
+            android:gravity="end"
             android:paddingLeft="0dp"
             android:paddingEnd="8dp"
             android:paddingRight="0dp" />
@@ -55,7 +54,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/mainLatestAnimalText"
             android:id="@+id/mainLatestAnimalText"
-            android:gravity="right|end"
+            android:gravity="end"
             android:paddingLeft="0dp"
             android:paddingEnd="8dp"
             android:paddingRight="0dp"
@@ -77,9 +76,7 @@
         android:id="@+id/add_observation_plant_button"
         android:onClick="showAddObservationPlant"
         android:layout_above="@+id/add_observation_animal_button"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"/>
-
+        android:layout_alignParentEnd="true" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -87,8 +84,6 @@
         android:id="@+id/add_observation_animal_button"
         android:onClick="showAddObservationAnimal"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true" />
-
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
